ChangeLog
=========

This file contains a listing of modifications to libast in CVS on a per-commit
basis.  Dates are included, as are nicknames/names/initials for the persons
making the changes.
	

Thu Nov  9 19:09:48 PST 2000	Michael Jennings <mej@eterm.org>

	Added name- and version-setting functions since we can't just use
	PACKAGE and VERSION any more.

-------------------------------------------------------------------------------
Thu Nov  9 19:19:31 PST 2000	Michael Jennings <mej@eterm.org>

	It usually helps if you finish writing the code BEFORE you commit it.
	
-------------------------------------------------------------------------------
Thu Nov 16 16:38:55 PST 2000	Michael Jennings <mej@eterm.org>

	Insure++ found a small logic error here that could result in a tiny
	leak under certain circumstances.
	
-------------------------------------------------------------------------------
Tue Jan  2 18:22:25 PST 2001	Michael Jennings <mej@eterm.org>

	Added file.c for any file routines I write.  The first one is a secure
	temp file generator.  If portability issues arise from non-POSIX
	systems, they will be addressed here.
	
-------------------------------------------------------------------------------